--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
     "prettier": "2.3.2",
+    "prop-types": "^15.7.2",
     "tailwindcss": "^2.2.12",
     "vite": "^2.5.4"
   }
